<resources>
    <string name="app_name">MiniAtendanceManager</string>
    <string name="login_here">Login Here</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="department">Deptartment</string>
    <string name="name">Name</string>
    <string name="account">Account</string>
    <string name="manage_your_personal_information">Manage your personal Information</string>
    <string name="check_in">Check In</string>
    <string name="check_in_to_your_desk_now">Check in to your desk now</string>
    <string name="check_out">Check Out</string>
    <string name="check_of_your_desk_now">Check of your desk now</string>
    <string name="taks">Tasks</string>
    <string name="check_the_tasks_assigned_to_you">Check the tasks assigned to you</string>
    <string name="staff_no">Staff No</string>
    <string name="you_have_not_checked_in_yet">You have not checked in yet</string>
    <string name="working">Working</string>
</resources>
